tests/errors/parse-error-assign.ja
procedure main()
    x[#] += 5
